@@ -1082,6 +1082,9 @@ jsp.tools.confirm-withdraw-item.question =Are you sure this item should be withd
 jsp.tools.confirm-withdraw-item.title =Withdraw Item
 jsp.tools.confirm-withdraw-item.withdraw.button =Withdraw
 
+jsp.tools.creative-commons-edit.title = DSpace Distribution License
+jsp.tools.creative-commons-edit.heading1 = Add or Replace Creative Commons License
+
 jsp.tools.edit-collection.title = Edit Collection
 jsp.tools.edit-collection.heading1 = Create Collection
 jsp.tools.edit-collection.heading2 = Edit Collection {0}
@@ -1133,6 +1136,7 @@ jsp.tools.edit-community.form.button.cancel = Cancel
 jsp.tools.edit-community.form.button.update = Update
 
 jsp.tools.edit-item-form.addbit.button =Add Bitstream
+jsp.tools.edit-item-form.addcc.button = Add Creative Commons License
 jsp.tools.edit-item-form.collections =In Collections:
 jsp.tools.edit-item-form.delete-w-confirm.button =Delete (Expunge)...
 jsp.tools.edit-item-form.elem1 =Element
@@ -1157,6 +1161,7 @@ jsp.tools.edit-item-form.note =PLEASE NOTE: These changes are not validated in a
 jsp.tools.edit-item-form.note1 =Note: Changes to the bitstreams will not be automatically reflected in the Dublin Core metadata above (e.g. <code>format.extent</code>, <code>format.mimetype</code>). You will need to update this by hand.
 jsp.tools.edit-item-form.note3 =Also note that if the "user format description" field isn't empty, the format will always be set to "Unknown", so clear the user format description before changing the format field.
 jsp.tools.edit-item-form.reinstate.button =Reinstate
+jsp.tools.edit-item-form.replacecc.button = Replace Creative Commons License
 jsp.tools.edit-item-form.title =Edit Item
 jsp.tools.edit-item-form.withdraw-w-confirm.button =Withdraw...
 
